[package]
name = "hermod"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0-beta.2"
actix-web = "4.0.0-beta.3"
tokio = "1.10.1"

[dev-dependencies]
actix-rt = "2.0.2"
reqwest = "0.11.4"
