[package]
name = "hermod"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0-beta.2"
actix-web = "4.0.0-beta.3"
tokio = "1.10.1"
serde-aux = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.67"
anyhow = "1.0.43"
base64 = "0.13"
thiserror = "1.0.29"
config = { version = "0.10.1", default-features = false, features = ["yaml"] }
argon2 = { version = "0.3", features = ["std"] }
rand = { version = "0.8", features= ["std_rng"] }
actix-identity = "0.4.0-beta.2"

[dependencies.sqlx]
version="0.5.7"
default-features = false
features = [
    "runtime-actix-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate",
    "offline"
]


[dev-dependencies]
actix-rt = "2.0.2"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
